# transtex

./: .gitignore  AGENTS.md  LICENSE  README.md
python/: README.md  pyproject.toml  setup.py
python/examples/: book_and_web_examples.py  citation_to_bibtex.py  convert.py  convert_citation_styles.py  format_from_bibtex.py
python/src/transtex/: __init__.py  bibtex.py  converter.py  formatting.py  parsing.py  reference.py
python/src/transtex/formatters/: __init__.py  apa.py  apa6.py  apa7.py  chicago.py  ieee.py  mla.py  shared.py  vancouver.py
python/src/transtex/parsers/: __init__.py  apa.py  chicago.py  ieee.py  mla.py  shared.py  vancouver.py
python/tests/: test_bibtex.py  test_converter.py  test_formatting.py  test_parsing.py
typescript/: .npmignore  README.md  package.json  tsconfig.json
typescript/examples/: bookAndWebExamples.ts  citationToBibtex.ts  convertCitationStyles.ts  formatFromBibtex.ts
typescript/src/: bibtex.ts  converter.ts  index.ts  parsing.ts  reference.ts
typescript/src/formatters/: apa6.ts  apa7.ts  chicago.ts  ieee.ts  index.ts  mla.ts  shared.ts  vancouver.ts
typescript/src/parsers/: apa.ts  chicago.ts  ieee.ts  index.ts  mla.ts  shared.ts  vancouver.ts
typescript/tests/: converter.test.ts  formatter.test.ts  parsing.test.ts
