[project]
name = "transtex"
version = "0.1.0"
description = "This library supports bidirectional conversion between APA 6th, IEEE, and other paper reference formats and BibTeX."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
